--- a/hkm2014.md
+++ b/hkm2014.md
@@ -194,10 +194,125 @@ Results
 ```
 
 
+```
+## Explicit sfStop() is missing: stop now.
+## 
+## Stopping cluster
+## 
+## snowfall 1.84-6 initialized (using snow 0.3-13): parallel execution on 4 CPUs.
+```
+
+```
+## Library varSelRF loaded.
+```
+
+```
+## Library varSelRF loaded in cluster.
+```
+
+```
+## 
+## 
+## |   |Variable | Percent|
+## |:--|:--------|-------:|
+## |1  |K        |    1.00|
+## |2  |NPratio  |    1.00|
+## |3  |NTL      |    1.00|
+## |4  |PTL      |    1.00|
+## |5  |TOC      |    1.00|
+## |6  |TURB     |    1.00|
+## |7  |WSA_ECO9 |    1.00|
+## |8  |ORGION   |    0.29|
+## |10 |DOC      |    0.18|
+## |9  |DEPTHMAX |    0.03|
+```
+
+```
+## 
+## Stopping cluster
+```
 
 
+```
+## snowfall 1.84-6 initialized (using snow 0.3-13): parallel execution on 4 CPUs.
+```
+
+```
+## Library varSelRF loaded.
+```
+
+```
+## Library varSelRF loaded in cluster.
+```
+
+```
+## 
+## 
+## |   |Variable           | Percent|
+## |:--|:------------------|-------:|
+## |2  |DOC                |    1.00|
+## |3  |K                  |    1.00|
+## |5  |NTL                |    1.00|
+## |6  |ORGION             |    1.00|
+## |7  |PTL                |    1.00|
+## |8  |TOC                |    1.00|
+## |9  |TURB               |    1.00|
+## |10 |WSA_ECO9           |    1.00|
+## |1  |DEPTHMAX           |    0.98|
+## |4  |NPratio            |    0.76|
+## |11 |AlbersX            |    0.48|
+## |13 |CropsPer_3000m     |    0.27|
+## |14 |ELEV_PT            |    0.16|
+## |12 |AlbersY            |    0.05|
+## |17 |NH4                |    0.05|
+## |15 |PH_FIELD           |    0.01|
+## |16 |EvergreenPer_3000m |    0.01|
+```
+
+```
+## 
+## Stopping cluster
+```
 
 
+```
+## snowfall 1.84-6 initialized (using snow 0.3-13): parallel execution on 4 CPUs.
+```
+
+```
+## Library varSelRF loaded.
+```
+
+```
+## Library varSelRF loaded in cluster.
+```
+
+```
+## 
+## 
+## |   |Variable | Percent|
+## |:--|:--------|-------:|
+## |4  |K        |    1.00|
+## |5  |NPratio  |    1.00|
+## |6  |NTL      |    1.00|
+## |8  |PTL      |    1.00|
+## |9  |TOC      |    1.00|
+## |10 |TURB     |    1.00|
+## |11 |WSA_ECO9 |    1.00|
+## |7  |ORGION   |    0.99|
+## |2  |DEPTHMAX |    0.96|
+## |1  |DDs45    |    0.90|
+## |12 |ELEV_PT  |    0.85|
+## |3  |DOC      |    0.58|
+## |13 |AlbersX  |    0.06|
+## |14 |AlbersY  |    0.03|
+## |15 |Na       |    0.03|
+```
+
+```
+## 
+## Stopping cluster
+```
 
 - Table. 
 
